option('CMAKE_BUILD_TYPE', type : 'string', value : RELEASE, description : 'Release/Debug build')
option('CSP_BUILD_NO_CXX_ABI', type : 'boolean', value : false, description : 'Do not use CXX11 ABI')
option('CSP_BUILD_TESTS', type : 'boolean', value : false, description : 'Build tests')
option('CSP_BUILD_COVERAGE', type : 'boolean', value : false, description : 'Hook into gcov for coverage testing')
option('CSP_BUILD_GPROF', type : 'boolean', value : false, description : 'Hook into gprof for profiling')
option('CSP_MANYLINUX', type : 'boolean', value : false, description : 'Build for python's manylinux setup')
option('CSP_USE_VCPKG', type : 'boolean', value : true, description : 'Build with vcpkg dependencies')
option('CSP_USE_CCACHE', type : 'boolean', value : false, description : 'Build with ccache caching')
option('CSP_USE_LD_CLASSIC_MAC', type : 'boolean', value : false, description : 'On macOS, link with ld_classic')
option('CSP_BUILD_KAFKA_ADAPTER', type : 'boolean', value : true, description : 'Build kafka adapter')
option('CSP_BUILD_PARQUET_ADAPTER', type : 'boolean', value : true, description : 'Build parquet adapter')
option('CSP_BUILD_WS_CLIENT_ADAPTER', type : 'boolean', value : true, description : 'Build ws client adapter')
