baselibimpl_lib = static_library('baselibimpl', 'baselibimpl.cpp')
# target_link_libraries(['baselibimpl', 'csp_core', 'csp_engine'])
basketlibimpl_lib = static_library('basketlibimpl', 'basketlibimpl.cpp')
# target_link_libraries(['basketlibimpl', 'baselibimpl', 'csp_core', 'csp_engine'])
mathimpl_lib = static_library('mathimpl', 'mathimpl.cpp')
# target_link_libraries(['mathimpl', 'csp_core', 'csp_engine'])
statsimpl_lib = static_library('statsimpl', 'statsimpl.cpp')
# set_target_properties(['statsimpl', 'PROPERTIES', 'PUBLIC_HEADER', 'statsimpl.h'])
# target_link_libraries(['statsimpl', 'baselibimpl', 'csp_core', 'csp_engine'])
# install(['TARGETS', 'baselibimpl', 'basketlibimpl', 'mathimpl', 'statsimpl', 'PUBLIC_HEADER', 'DESTINATION', 'include/csp/cppnodes', 'RUNTIME', 'DESTINATION', csp_runtime_install_subdir, 'LIBRARY', 'DESTINATION', 'lib/'])
